Integrate temperature reading
Only used for information at the moment.
